// Copyright 2020 The Chromium Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package workflows;

option go_package = "infra/chromeperf/workflows";

import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "google/protobuf/type.proto";
import "google/protobuf/struct.proto";

message WorkflowTemplate {
  option (google.api.resource) = {
    type: "engine.perf.apis.cr.dev/WorkflowTemplate"
    pattern: "/workflow-templates/{template}"
  };

  // The name should be unique, of the form /workflow-templates/<name>.
  string name = 1 [(google.api.field_behavior) = REQUIRED];

  // Human-readable name displayed in user interfaces.
  string display_name = 2 [(google.api.field_behavior) = REQUIRED];

  // Human-readable description. This shows up in user-infterfaces and may contain some formatting HTML tags (<b>, <i>,
  // <p>) and <a> tags with links.
  string description = 3 [(google.api.field_behavior) = REQUIRED];

  // This is a list of input fields which describe the inputs required by a template. This will be used in the following
  // scenarios:
  //
  // - In user-interfaces we can create fields of the appropriate types.
  // - When expanding a template with provided inputs, the description here is used to perform type validation.
  //
  // Fields may provide an option named "validation" which can be used to describe certain supported validators.
  //
  // TODO(dberris): Document and implement the support for validators.
  repeated google.protobuf.Field inputs = 4;

  // Task Options
  //
  // These options can refer to the inputs provided in `inputs` above using Python-style f-string syntax (i.e. input
  // names surrounded by curly braces `{name}`). We're representing the options as a Struct that can be turned into the
  // inputs that a graph creation function can use.
  //
  // The template instantiator can check whether a string value in the Struct is a reference to a numeric value or enum
  // values based on the field descriptor in `inputs` above and translate those accordingly.
  google.protobuf.Struct task_options = 5;

  // Graph Creation Module
  //
  // This is a fully-qualified module name which contains both the TaskOptions definition and `create_graph` function.
  //
  // Note that this is only useful for the Python-based execution engine and can be approximated by future engines by
  // having a fixed catalogue of graph creation functions.
  string graph_creation_module = 6 [(google.api.field_behavior) = REQUIRED];

  // CRIA (ChRome Infra Auth) groups for which this template can be readable. When empty it will default to the
  // administrators of the service.
  repeated string cria_readers = 7 [(google.api.field_behavior) = INPUT_ONLY];
}